# cryptic-auth

./: .env  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENCE  README.md  UNIFIED_AUTH_REFACTORING.md  crates.js  help.html  list-scripts.sh  search-index.js  settings.html  setup-modular.sh  setup.sh  src-files.js  summary.sh
.github/workflows/: ci.yml  docs.yml  publish.yml
.sqlx/: query-08716ddbc73e32d2f546b784013e635d27f2ca078b58bd8f71d2be1a311498db.json  query-1f8d2b5e331833a9b4e683225b52120d7883b33a21cfe63d170590ad6d9124ad.json  query-2cd36fe883f7ad6d61ffd6c3371a8860c05ba134dfd639b697b635220fda0110.json  query-3683a264357441626d2695990b7ad98a4106596053c0aabbf39a780e8bab4e7d.json  query-50130dfe2fba648b723305b34e5dbdb342f1d30deb3d55833d93e793c2d6dbe2.json  query-645c0a982a51ccf4c7ff18c118af9c1a0a52b8cdf046f975b44515ad0f2edee2.json  query-756a40eef07fb299d41130b7eb5fb2bda6e0eb8a4fbec3bfa0f65f0e074efbd1.json  query-7c6737d409233508b72e4eea67c6bc5e63e3ba811157cb4f1aa25793cd2fc5bd.json  query-912237f5d3627db6cf71dbbaa879c9cee82529eebfd5dcb97ffa2e451853e70d.json  query-9b715a59d9420de2a8a84c1e22b899609d8bf0a2cd0a573519fe07643babee5a.json  query-cbddef02f327a14352d835828d5a9405d05feaa23883a554b387f0d3228218c5.json  query-e58b26cf2d2ecc6b63ca699469611480a178da2e81fe45745ed945d0e81390a4.json  query-fbcafc76cdbad4f336d32c6f73f98c2941651057b6a569ecef7608438f58ae29.json  query-fd14e33c0f3ccd24fb11ff7ac7897a6746e6fc1c1374d7498b2555cad9e08c6a.json
benches/: all_benches.rs  hashing_perf.rs
examples/: basic_usage.rs  pg.rs  unified_auth_example.rs  web_server.rs
examples/cli_example/: Cargo.toml
examples/cli_example/src/: main.rs
examples/pg/: Cargo.toml
examples/pg/src/: main.rs
examples/web_server/: Cargo.toml
examples/web_server/src/: main.rs
migrations/: 20250719202240_postgres.sql
migrations/sql/: postgres.sql
narangcia_cryptic/: all.html  index.html
narangcia_cryptic/auth_service/: enum.LoginMethod.html  enum.SignupMethod.html  index.html  struct.AuthService.html
narangcia_cryptic/core/: index.html  sidebar-items.js
narangcia_cryptic/core/credentials/: index.html  struct.Credentials.html
narangcia_cryptic/core/hash/: index.html
narangcia_cryptic/core/oauth/: index.html  sidebar-items.js  trait.OAuth2Service.html
narangcia_cryptic/core/password/: index.html  sidebar-items.js
narangcia_cryptic/core/policy/: index.html  struct.PasswordPolicy.html
narangcia_cryptic/core/token/: index.html  sidebar-items.js  struct.TokenPair.html  trait.TokenService.html
narangcia_cryptic/core/user/: index.html  struct.User.html
narangcia_cryptic/core/vars/: index.html  struct.AuthServiceVariables.html
narangcia_cryptic/error/: enum.AuthError.html  index.html
narangcia_cryptic_auth/: all.html  index.html  sidebar-items.js
narangcia_cryptic_auth/auth_service/: enum.LoginMethod.html  enum.SignupMethod.html  index.html  sidebar-items.js  struct.AuthService.html
narangcia_cryptic_auth/core/: index.html
narangcia_cryptic_auth/core/credentials/: index.html  sidebar-items.js  struct.Credentials.html
narangcia_cryptic_auth/core/hash/: index.html  sidebar-items.js
narangcia_cryptic_auth/core/oauth/: index.html  trait.OAuth2Service.html
narangcia_cryptic_auth/core/password/: index.html
narangcia_cryptic_auth/core/policy/: index.html  sidebar-items.js  struct.PasswordPolicy.html
narangcia_cryptic_auth/core/token/: index.html  struct.TokenPair.html  trait.TokenService.html
narangcia_cryptic_auth/core/user/: index.html  sidebar-items.js  struct.User.html
narangcia_cryptic_auth/core/vars/: index.html  sidebar-items.js  struct.AuthServiceVariables.html
narangcia_cryptic_auth/error/: enum.AuthError.html  index.html
scripts/: create-core-files.sh  create-docs.sh  create-modules.sh  create-tests.sh  setup-cargo.sh  setup-ci.sh  setup-directories.sh
search.desc/narangcia_cryptic/: narangcia_cryptic-desc-0-.js
search.desc/narangcia_cryptic_auth/: narangcia_cryptic_auth-desc-0-.js
src/: auth_service.rs  error.rs  lib.rs  postgres.rs  utils.rs  web_axum.rs
src/core/: mod.rs
src/core/credentials/: mod.rs  plain_password.rs
src/core/hash/: argon2.rs  mod.rs  salt.rs
src/core/oauth/: manager.rs  mod.rs  store.rs
src/core/password/: argon2.rs  manager.rs  mod.rs  salt.rs
src/core/policy/: mod.rs
src/core/token/: claims.rs  jwt.rs  mod.rs
src/core/user/: mod.rs  persistence.rs
src/core/vars/: mod.rs
src/narangcia_cryptic/: auth_service.rs.html  error.rs.html  lib.rs.html
src/narangcia_cryptic/core/: mod.rs.html
src/narangcia_cryptic_auth/: auth_service.rs.html  error.rs.html  lib.rs.html
src/narangcia_cryptic_auth/core/: mod.rs.html
src/password/: mod.rs
src/policy/: mod.rs
src/rbac/: mod.rs
src/token/: claims.rs  mod.rs
src/user/: mod.rs
tests/: all_tests.rs  hashing_password_test.rs  integration_test.rs
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/hash/: trait.Hash.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  (+3 more)
trait.impl/zeroize/: trait.Zeroize.js
(+128 files in other folders)
