[package]
name = "z3-auth"
version = "0.1.0-alpha"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
tokio = { version = "1.46.1", features = ["full"] }
jsonwebtoken = "9.3.1"
bcrypt = "0.17.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.17.0", features = ["v4"] }
chrono = "0.4.41"
validator = "0.20.0"
